<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:id="@id/gen_background">
    <LinearLayout 
    	android:layout_height="@dimen/title_height" 
    	android:layout_width="match_parent" 
    	android:background="@drawable/titlebar" 
    	android:id="@+id/textView1">
        <Button 
        	android:id="@id/gen_btn_back" 
        	android:background="@drawable/title_btn_back" 
        	android:layout_width="@dimen/title_btn_width" 
        	android:layout_height="wrap_content" 
        	android:textColor="@color/btn_color"
        	android:textSize="@dimen/title_btn_word"
        	android:layout_gravity="center_vertical" 
        	android:text="@string/gen_btn_back"/>
        <TextView 
        	android:textSize="@dimen/title_word" 
        	android:id="@+id/textView3" 
        	android:gravity="center" 
        	android:layout_gravity="center" 
        	android:layout_width="wrap_content" 
        	android:layout_weight="1" 
        	android:textColor="@color/title_color"
        	android:layout_height="wrap_content" 
        	android:text="@string/favo_tag"/>
        <Button 
        	android:id="@id/gen_btn_main" 
        	android:background="@drawable/title_btn_main" 
        	android:layout_width="@dimen/title_btn_width" 
        	android:layout_height="wrap_content" 
        	android:textColor="@color/btn_color" 
        	android:textSize="@dimen/title_btn_word"
        	android:layout_gravity="center_vertical" 
        	android:text="@string/gen_btn_main"/>
    </LinearLayout>
    <LinearLayout 
    	android:layout_width="match_parent" 
    	android:id="@+id/linearLayout1" 
    	android:orientation="vertical" 
    	android:layout_marginLeft="@dimen/margin_left_s" 
    	android:layout_marginRight="@dimen/margin_left_s" 
    	android:layout_height="0sp" 
    	android:layout_weight="1">
        <ListView 
        	android:cacheColorHint="#00000000" 
        	android:id="@+id/lv" 
        	android:layout_marginBottom="5sp" 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent" 
        	android:layout_marginTop="5sp" 
        	android:layout_weight="1"
        	android:divider="#AAAAAA"    
			android:dividerHeight="0.5dp"/>
        <LinearLayout 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/linearLayout2"  
        	android:gravity="center"
        	android:layout_marginBottom="10dp">
            <Button 
            	android:id="@+id/add_to_quote" 
            	android:text="@string/favo_addtoquote"
            	android:textColor="@color/btn_color" 
            	android:textSize="@dimen/btn_word" 
            	android:background="@drawable/btn_default"
            	android:layout_height="@dimen/btn_height" 
            	android:layout_width="@dimen/btn_width"/>
            <Button 
            	android:id="@+id/delete_myfavor" 
            	android:text="@string/favo_delete" 
            	android:textSize="@dimen/btn_word" 
            	android:background="@drawable/btn_default_normal" 
            	android:layout_height="@dimen/btn_height" 
            	android:layout_width="@dimen/btn_width" 
            	android:layout_marginLeft="30dp" 
            	android:textColor="@color/btn_color"/>
        </LinearLayout>
    </LinearLayout>
    <TextView 
    android:layout_height="@dimen/bottom_bar_height" 
    android:layout_width="match_parent" 
    android:id="@+id/textView2" 
    android:background="@drawable/bottom"/>
</LinearLayout>