<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:orientation="vertical"
	android:background="@drawable/exit_dialog_bg"
	android:gravity="bottom"
	android:layout_height="fill_parent">
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="10sp"
		android:layout_marginLeft="10sp"
		android:gravity="center"
		android:layout_marginRight="10sp"
		android:orientation="horizontal">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:src="@drawable/exit_dialog_warm"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/dialog_title_exit_finish"
			android:textColor="@color/exit_dialog_text_color"
			android:textSize="20sp"
			android:textStyle="bold"
			android:layout_marginLeft="20sp"
			android:gravity="left|center_vertical"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="50sp"
		android:gravity="center"
		android:layout_margin="10sp"
		android:orientation="horizontal">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/exit_text1"
			android:textColor="@color/exit_dialog_text_color"
			android:textSize="@dimen/text_word"
			android:gravity="center_vertical"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:textColor="@color/exit_dialog_text_color"
			android:textSize="@dimen/big_word"
			android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp"
			android:gravity="center_vertical"
			android:text="@string/exit_text2"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:textColor="@color/text_color"
			android:textSize="@dimen/big_word"
			android:gravity="center_vertical"
			android:text="？"/>
	</LinearLayout>
	<!-- 
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_marginTop="6sp"
		android:layout_marginBottom="6sp" android:orientation="horizontal">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_weight="1" android:gravity="center"
			android:layout_marginLeft="10sp" android:layout_height="wrap_content">
			<Button android:id="@+id/btn_no" android:layout_width="80sp"
				android:layout_height="40sp" android:textSize="@dimen/btn_word"
				android:background="@drawable/dialog_btn_style" android:textColor="#4169e1"
				android:text="@string/gen_btn_no" />
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_weight="1" android:gravity="center"
			android:layout_marginRight="10sp" android:layout_height="wrap_content">
			<Button android:id="@+id/btn_yes" android:layout_width="80sp"
				android:layout_height="40sp" android:textSize="@dimen/btn_word"
				android:background="@drawable/dialog_btn_style" android:textColor="#4169e1"
				android:text="@string/gen_btn_yes" />
		</LinearLayout>

	</LinearLayout>
	 -->
	<LinearLayout 
		android:id="@+id/exit_btn_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_margin="10sp"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		>
		<Button android:id="@+id/btn_no" 
			android:layout_width="0sp"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:textSize="@dimen/btn_word"
			android:textColor="@color/btn_color" 
			android:background="@android:color/transparent"
			android:text="@string/base_btn_no" />
		<Button android:id="@+id/btn_yes" 
			android:layout_width="0sp"
			android:layout_height="wrap_content" 
			android:textSize="@dimen/btn_word"
			android:textColor="@color/btn_color"
			android:layout_weight="1"
			android:background="@android:color/transparent"
			android:text="@string/base_btn_yes" />
	</LinearLayout>
</LinearLayout>
