<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:id="@id/gen_background">
    <LinearLayout 
    	android:layout_height="@dimen/title_height" 
    	android:layout_width="match_parent" 
    	android:background="@drawable/titlebar" 
    	android:id="@+id/textView1">
        <Button 
        	android:layout_width="@dimen/title_btn_width" 
        	android:textColor="@color/btn_color" 
        	android:id="@id/gen_btn_back" 
        	android:background="@drawable/title_btn_back" 
        	android:layout_height="wrap_content" 
        	android:text="@string/gen_btn_back" 
        	android:textSize="@dimen/title_btn_word"
        	android:layout_gravity="center_vertical"/>
        <TextView 
        	android:layout_width="wrap_content" 
        	android:text="@string/temp_det_tag" 
        	android:layout_weight="1" 
        	android:gravity="center" 
        	android:singleLine="true"
        	android:focusable="true"
        	android:focusableInTouchMode="true"
        	android:ellipsize="marquee"
        	android:marqueeRepeatLimit="marquee_forever"
        	android:textSize="@dimen/title_word"
        	android:textColor="@color/title_color"
        	android:id="@+id/TextView02" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center"/>
        <Button 
        	android:layout_width="@dimen/title_btn_width" 
        	android:textColor="@color/btn_color" 
        	android:id="@id/gen_btn_main" 
        	android:background="@drawable/title_btn_main" 
        	android:layout_height="wrap_content" 
        	android:text="@string/gen_btn_main"
        	android:textSize="@dimen/title_btn_word" 
        	android:layout_gravity="center_vertical"/>
    </LinearLayout>
    
    <TextView 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:id="@+id/pred_container_name" 
    	android:layout_marginTop="10sp"
    	android:layout_marginLeft="20sp"
    	android:layout_marginRight="20sp"
    	android:textColor="#55692F"
    	android:textSize="@dimen/big_word" 
    	android:textStyle="bold"/>
    <ListView 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/pred_product_list" 
    	android:layout_margin="10sp"
    	android:layout_weight="1"
    	android:cacheColorHint="#00000000"
    	android:listSelector="@drawable/list_selector"
    	android:divider="#AAAAAA"    
		android:dividerHeight="0.5dp"/>
    <TableLayout 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/tableLayout1"
    	android:layout_marginLeft="20sp"
    	android:layout_marginRight="20sp">
        <TableRow 
        	android:id="@+id/tableRow1" 
        	android:layout_height="wrap_content" 
        	android:layout_width="match_parent">
            <LinearLayout 
            	android:layout_height="match_parent" 
            	android:id="@+id/linearLayout2" 
            	android:layout_width="0sp" 
            	android:layout_weight="1">
                <TextView 
                	android:layout_width="wrap_content" 
                	android:id="@+id/textView6" 
                	android:textColor="@color/key_word_color"
                	android:textSize="@dimen/text_word"
                	android:layout_height="wrap_content" 
                	android:text="@string/i_container_type" 
                	android:layout_marginLeft="10sp"/>
                <TextView 
                	android:layout_marginLeft="10sp"
                	android:layout_height="wrap_content" 
                	android:id="@+id/pred_container_type"
                	android:textSize="@dimen/text_word"
                	android:textColor="@color/text_color"
                	android:layout_width="match_parent"/>
            </LinearLayout>
            <LinearLayout 
            	android:layout_height="wrap_content" 
            	android:id="@+id/linearLayout1" 
            	android:layout_width="0sp" 
            	android:layout_weight="1">
                <TextView 
                	android:layout_height="wrap_content" 
                	android:id="@+id/textView2" 
                	android:textColor="@color/key_word_color"
                	android:textSize="@dimen/text_word"
                	android:layout_width="wrap_content" 
                	android:text="@string/i_port"/>
                <TextView 
                	android:layout_height="wrap_content" 
                	android:id="@+id/pred_port"
                	android:layout_marginLeft="10sp"
                	android:textColor="@color/text_color"
                	android:textSize="@dimen/text_word"
                	android:layout_width="match_parent"/>
            </LinearLayout>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow2" 
        	android:layout_height="wrap_content" 
        	android:layout_width="match_parent">
            <LinearLayout 
            	android:id="@+id/linearLayout3" 
            	android:layout_width="0sp" 
            	android:layout_height="wrap_content" 
            	android:layout_weight="1">
                <TextView 
                	android:layout_width="wrap_content" 
                	android:id="@+id/textView3" 
                	android:textColor="@color/key_word_color"
                	android:textSize="@dimen/text_word"
                	android:layout_height="wrap_content" 
                	android:text="@string/i_zone" 
                	android:layout_marginLeft="10sp"/>
                <TextView 
                	android:layout_height="wrap_content" 
                	android:id="@+id/pred_zone"
                	android:layout_marginLeft="10sp"
                	android:textColor="@color/text_color"
                	android:textSize="@dimen/text_word" 
                	android:layout_width="match_parent"/>
            </LinearLayout>
            <LinearLayout 
            	android:id="@+id/linearLayout4" 
            	android:layout_width="0sp" 
            	android:layout_height="wrap_content" 
            	android:layout_weight="1">
                <TextView 
                	android:layout_width="wrap_content" 
                	android:id="@+id/textView7" 
                	android:textColor="@color/key_word_color"
                	android:textSize="@dimen/text_word"
                	android:layout_height="wrap_content" 
                	android:text="@string/i_brand"/>
                <TextView 
                	android:layout_height="wrap_content" 
                	android:id="@+id/pred_brand" 
                	android:layout_marginLeft="10sp"
                	android:textColor="@color/text_color"
                	android:textSize="@dimen/text_word"
                	android:layout_width="match_parent"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <RelativeLayout 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:layout_marginTop="10dp" 
    	android:gravity="center"
    	android:layout_marginBottom="10dp">
        <Button 
        	android:id="@+id/order" 
        	android:textSize="@dimen/btn_word" 
        	android:layout_width="@dimen/btn_width" 
        	android:layout_alignParentRight="true" 
        	android:layout_height="@dimen/btn_height" 
        	android:text="@string/i_order" 
        	android:background="@drawable/btn_default" 
        	android:layout_marginRight="@dimen/margin_left_s" 
        	android:textColor="@color/btn_color"/>
	</RelativeLayout>
	<TextView 
    	android:layout_width="match_parent" 
    	android:id="@+id/TextView01" 
    	android:background="@drawable/bottom" 
    	android:layout_height="@dimen/bottom_bar_height"/>
</LinearLayout>
