<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout 
    	android:layout_height="@dimen/title_height" 
    	android:background="@drawable/titlebar"  
    	android:layout_width="match_parent" 
    	android:id="@+id/textView1">
        <Button 
        	android:layout_width="@dimen/title_btn_width" 
        	android:layout_height="wrap_content" 
        	android:id="@id/gen_btn_back" 
        	android:background="@drawable/title_btn_back" 
        	android:textColor="@color/btn_color" 
        	android:textSize="@dimen/title_btn_word"
        	android:layout_gravity="center_vertical" 
        	android:text="@string/gen_btn_back"/>
        <TextView 
        	android:textSize="@dimen/title_word"
        	android:textColor="@color/title_color"
        	android:id="@+id/textView3" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center" 
        	android:layout_weight="1" 
        	android:gravity="center" 
        	android:text="@string/pro_sear_tag"/>
        <Button 
        	android:layout_width="@dimen/title_btn_width" 
        	android:layout_height="wrap_content" 
        	android:id="@id/gen_btn_main" 
        	android:textSize="@dimen/title_btn_word"
        	android:background="@drawable/title_btn_main" 
        	android:textColor="@color/btn_color" 
        	android:layout_gravity="center_vertical" 
        	android:text="@string/gen_btn_main"/>
    </LinearLayout>
    <TabHost 
    	android:id="@android:id/tabhost" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="1">
        <LinearLayout 
        	android:id="@+id/linearLayout1" 
        	android:layout_width="match_parent" 
        	android:layout_height="match_parent" 
        	android:orientation="vertical">
            <TabWidget 
            	android:layout_width="match_parent" 
            	android:layout_height="@dimen/tab_height" 
            	android:id="@android:id/tabs"/>
            <FrameLayout 
            	android:layout_width="match_parent"  
            	android:layout_height="match_parent" 
            	android:id="@android:id/tabcontent"/>
        </LinearLayout>
    </TabHost>
    <TextView 
    	android:layout_height="@dimen/bottom_bar_height" 
    	android:background="@drawable/bottom" 
    	android:layout_width="match_parent" 
    	android:id="@+id/textView2"/>
</LinearLayout>
